# bbq

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/bbq/: Cargo.toml
crates/bbq-cli/: Cargo.toml
crates/bbq-cli/src/: cli.rs  config.rs  main.rs  open.rs  theme.rs  update.rs
crates/bbq-cli/src/tui/: app.rs  constants.rs  mod.rs  render.rs  types.rs  worker.rs
crates/bbq-cli/tests/: cli.rs
crates/bbq/src/: error.rs  git.rs  lib.rs  model.rs  paths.rs  scripts.rs  validate.rs  worktree_names.rs
crates/bbq/tests/: git.rs
