[package]
name = "bbq-cli"
version = "0.1.6"
edition = "2021"
description = "CLI and TUI for managing git worktrees."
license = "MIT"
repository = "https://github.com/richardhenry/bbq"
readme = "../../README.md"
keywords = ["git", "worktree", "cli", "tui"]
categories = ["development-tools"]

[dependencies]
bbq = { path = "../bbq" }
clap = { version = "4.5", features = ["derive"] }
ratatui = { version = "0.26", features = ["unstable-rendered-line-info"] }
crossterm = "0.27"
notify = "6.1"
serde_json = "1.0"
semver = "1.0"

[[bin]]
name = "bbq"
path = "src/main.rs"
